<resources>
    <string name="app_name">FlyZik</string>
    <string name="volley_time_out_error">Délai de connection dépassé … Veuillez vérifier votre connexion Internet !</string>
    <string name="volley_parse_error">Erreur d\'analyse … Veuillez réessayer après un certain temps !</string>
    <string name="volley_authfail">Impossible de se connecter à Internet … Veuillez vérifier votre connexion !</string>
    <string name="volley_server_error">Impossible de trouver le serveur. Veuillez réessayer après un certain temps !</string>
    <string name="volley_network_error">Impossible de se connecter à Internet … Veuillez vérifier votre connexion !</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cnx">Connexion</string>
    <string name="email_numero_tel">email</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="vous_n_avez_pas_de_compte_cliquez_ici">vous n\'avez pas de compte? cliquez ici</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="insription">Insription</string>
    <string name="vous_avez_d_j_un_compte_cliquez_ici">vous avez déjà un compte? cliquez ici</string>
    <string name="nom">Nom*</string>
    <string name="pr_nom">Prénom*</string>
    <string name="email">Email*</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="etes_vous_artiste">Etes-vous artiste ?</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="file_d_actualit">File d\'actualité</string>
    <string name="chat">Chat</string>
    <string name="music">Music</string>
    <string name="place">Place</string>
    <string name="invit">invité</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="a_propos">A propos</string>
    <string name="accueil">Accueil</string>
    <string name="plus">plus</string>
    <string name="nos_artistes">Nos Artistes</string>
    <string name="voir_plus">voir plus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mode_sombre">Mode sombre</string>
    <string name="param_tres">paramètres</string>
    <string name="voir">voir</string>
    <string name="version">version</string>
    <string name="b_ta_1_0">Béta 1.0</string>
    <string name="_2020">© 2020</string>
    <string name="ateur">Auteur</string>
    <string name="essengo_group">Essengo Group</string>
    <string name="d_velopper_par">développer par</string>
    <string name="nos_contacts">Nos contacts</string>
    <string name="_242_06_6">(+242) 06 6** ** **</string>
    <string name="essengogroup_cg_gmail_com">**********@gmail.com</string>
    <string name="dj_youss">ZABRAWN Industrie </string>
    <string name="profile">profile</string>
    <string name="pseudo">Pseudo</string>
    <string name="date">date</string>
    <string name="lorem">Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l\'imprimerie depuis les années 1500, quand un imprimeur anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n\'a pas fait que survivre cinq siècles, mais s\'est aussi adapté à la bureautique informatique, sans que son contenu n\'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</string>
    <string name="j_aime">j\'aime</string>
    <string name="commentaire">commentaire</string>
    <string name="partager">partager</string>
    <string name="dernier_message">dernier message</string>
    <string name="publier">PUBLIER</string>
    <string name="entrez_votre_text_publier">entrez votre text à publier</string>
    <string name="importer_une_photo">importer une photo</string>
    <string name="importer_une_vid_o">importer une vidéo</string>
    <string name="modifier">modifier</string>
    <string name="new_song">PUBLIER UNE CHANSON</string>
    <string name="selectionne_une_chanson">selectionne une chanson</string>
    <string name="le_nom_du_morceau">Nom du morceau</string>
    <string name="le_genre">Genre</string>
    <string name="nom_de_l_album">Nom de l\'album</string>
    <string name="nom_de_l_artiste">Nom de l\'artiste</string>
    <string name="plus_d_info">Plus d\'info</string>
    <string name="type">type</string>
    <string name="adresse">Adresse</string>
    <string name="description">Description</string>
    <string name="continuer">Continuer</string>
    <string name="ignorez_cette_tape">Ignorez </string>
    <string name="image_de_profile">Image de profile</string>
    <string name="description_">Description*</string>
    <string name="importer_une_chanson">Importer une chanson</string>
    <string name="information_supplementaire">Information supplementaire</string>
    <string name="emplacement_du_son">emplacement du son</string>
    <string name="coutez_la_chanson_que_vous_avez_import">écoutez la chanson que vous avez importé</string>
    <string name="nom_de_la_place">nom de la place*</string>
    <string name="adresse_">Adresse*</string>
    <string name="num_ro">Numéro*</string>
    <string name="a_pseudo">A pseudo</string>
    <string name="aujouter_une_chanson">aujouter une chanson</string>
    <string name="ajouter_une_image">ajouter une image</string>
    <string name="abonn_s">Abonnés</string>
    <string name="publications">Publications</string>
    <string name="photos">Photos</string>
    <string name="biographie">Biographie</string>
    <string name="s_abonner">S\'abonner</string>
    <string name="nouveau">nouveau</string>
    <string name="inviter">Inviter</string>
    <string name="modifier_votre_profile">modifier votre profile</string>
    <string name="r_diger_un_message">Rédiger un message...</string>
    <string name="supprimer">supprimer</string>
    <string name="quel_genre_etes_vous">Quel genre etes-vous :</string>
    <string name="nom_d_artiste">nom d\'artiste</string>
    <string name="ajouter_une_chanson">ajouter une chanson</string>
</resources>
