<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.AddMediaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:title="@string/new_song"
            app:titleTextColor="@color/colorBtn"
            app:titleTextAppearance="?android:textAppearanceSmall"
            android:background="@android:color/transparent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/large_taille"
                android:src="@drawable/ecouteur"
                android:adjustViewBounds="true"
                android:id="@+id/imgCover"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/progress"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/petite_marge">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/importer_une_chanson"
                android:textAppearance="?android:textAppearanceSmall"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/colorBtn"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/tres_petite_marge"
                android:layout_marginRight="@dimen/tres_petite_marge"
                android:background="@color/colorBtn"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/tres_petite_marge"
                android:layout_marginBottom="@dimen/tres_petite_marge"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addSong"
            android:layout_margin="@dimen/tres_petite_marge"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/selectionne_une_chanson"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/petite_marge"
            android:layout_marginRight="@dimen/petite_marge"
            android:layout_marginTop="@dimen/tres_petite_marge"
            android:layout_marginBottom="@dimen/tres_petite_marge">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/songLocation"
                android:layout_gravity="center_vertical"
                android:text="@string/coutez_la_chanson_que_vous_avez_import"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_music_note_black_24dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimary"
                android:drawablePadding="@dimen/tres_petite_marge"
                android:textAppearance="?android:textAppearanceSmall"
                android:fontFamily="@font/comfortaa_light"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/playPreview"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:src="@drawable/ic_play_circle_outline_black_24dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/petite_marge">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_supplementaire"
                android:textAppearance="?android:textAppearanceSmall"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/colorBtn"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/tres_petite_marge"
                android:layout_marginRight="@dimen/tres_petite_marge"
                android:background="@color/colorBtn"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/tres_petite_marge"
                android:layout_marginBottom="@dimen/tres_petite_marge"/>
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardMaxElevation="@dimen/normale_marge"
            app:cardElevation="@dimen/petite_marge"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/petite_marge"
            android:layout_margin="@dimen/petite_marge">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/lineTop">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/petite_taille"
                    android:background="@android:color/transparent"
                    android:id="@+id/music_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:fontFamily="@font/comfortaa_light"
                    android:layout_margin="@dimen/tres_petite_marge"
                    android:textAppearance="?android:textAppearance"
                    android:hint="@string/le_nom_du_morceau"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorback"
                    android:layout_marginTop="@dimen/tres_petite_marge"
                    android:layout_marginBottom="@dimen/tres_petite_marge"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/petite_taille"
                    android:background="@android:color/transparent"
                    android:id="@+id/music_artiste"
                    android:inputType="text"
                    android:maxLines="1"
                    android:fontFamily="@font/comfortaa_light"
                    android:layout_margin="@dimen/tres_petite_marge"
                    android:textAppearance="?android:textAppearance"
                    android:hint="@string/nom_de_l_artiste"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/petite_taille"
            app:cardBackgroundColor="@color/colorBtn"
            app:cardCornerRadius="@dimen/grande_marge"
            app:cardElevation="@dimen/petite_marge"
            app:cardMaxElevation="@dimen/normale_marge"
            android:id="@+id/btnPublier"
            android:layout_marginLeft="@dimen/tres_petite_marge"
            android:layout_marginRight="@dimen/tres_petite_marge"
            android:layout_marginTop="@dimen/moyenne_marge"
            android:layout_marginBottom="@dimen/moyenne_marge">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/publier"
                    android:textAppearance="?android:textAppearance"
                    android:fontFamily="@font/comfortaa_bold"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>