<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/relaPlace"
    android:layout_height="@dimen/large_taille">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:id="@+id/imgCouverture"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorFlouNoir">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnModifier"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/micro_petite_marge"
            android:tint="@android:color/white"
            android:src="@drawable/ic_mode_edit"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_above="@id/txtTitre">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="@dimen/micro_petite_marge"
                android:layout_gravity="center">
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="@dimen/tres_petite_taille"
                    android:layout_height="@dimen/tres_petite_taille"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center"
                    android:id="@+id/imgCover"
                    app:lottie_rawRes="@raw/position"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlanc"
                    android:textSize="@dimen/tres_petite_police"
                    android:fontFamily="@font/comfortaa_light"
                    android:text="@string/adresse"
                    android:id="@+id/txtAdresse"
                    android:layout_margin="@dimen/micro_petite_marge"
                    android:textAppearance="?android:textAppearanceSmall"/>
            </LinearLayout>

            <TextView
                android:layout_width="@dimen/large_taille"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/type"
                android:textAllCaps="true"
                android:textSize="@dimen/tres_petite_police"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/txtType"
                android:padding="@dimen/micro_petite_marge"
                android:background="@color/colorBackFlou"
                android:textColor="@color/colorBlanc"
                android:fontFamily="@font/carter_one"
                android:layout_weight="1"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitre"
            android:layout_alignParentBottom="true"
            android:text="@string/app_name"
            android:layout_margin="@dimen/micro_petite_marge"
            android:textColor="@color/colorBlanc"
            android:textAppearance="?android:textAppearanceLarge"
            android:fontFamily="@font/comfortaa_bold"/>

    </RelativeLayout>

</RelativeLayout>